--- a/time-tracker/src/Components/Cards/Styles/UserCardStyle.scss
+++ b/time-tracker/src/Components/Cards/Styles/UserCardStyle.scss
@@ -2,14 +2,15 @@
 
 .user-card-container {
 	width: 100%;
+	border-radius: 10px;
 	height: $CARD_HEIGHT;
 	background-color: red;
 }
 
 @media only screen and (min-width:$DESKTOP_BP) {
 	.user-card-container {
-		width: 100%;
 		height: 100%;
+		width: $CARD_HEIGHT;
 	}
 }
 
