--- a/time-tracker/src/Components/Parent/Styles/MainPageStyle.scss
+++ b/time-tracker/src/Components/Parent/Styles/MainPageStyle.scss
@@ -2,15 +2,15 @@
 
 main {
 	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	// display: flex;
+	// align-items: center;
+	// justify-content: center;
 
 	// overflow: hidden;
 	// overflow-y: scroll;
 
 	//border: 1px solid black;
-	background-color: orange;
+	//background-color: orange;
 }
 
 .cards-grid {
@@ -74,7 +74,7 @@ main {
 	}
 
 	.cards-grid {
-		width: 90%;
+		width: 100%;
 		gap: 10px 12px;
 	
 		grid-template-rows: 1fr 1fr;
